--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="normalize.css">
     <link rel="stylesheet" type="text/css" href="todo.css">
     <script src="todo/index.js"></script>
-    <script src="todo/f.js"></script>
+    <script src="todo/todolist.js"></script>
 
 </head>
 
