re-build project

--- a/index.html
+++ b/index.html
@@ -10,16 +10,7 @@
 </head>
 
 <body>
-    <div class="cntr">
-        <div id="add-todo">
-            <form class="add-todo">
-                <input class="myinput" type="text" placeholder="Don't Forget to..." name="item" required>
-                <input class="button" type="submit" value="+">
-            </form>
-        </div>
-        <ul class="todo-list"></ul>
-        <div class="remove-List">Remove All</div>
-    </div>
+    <div class="cntr"> </div>
     <script src="dist/bundle.js"></script>
 </body>
 
